--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==3.2.9
 django-appconf==1.0.5
 django-avatar==5.0.0
 django-heroku==0.0.0
+django-markdown==0.8.4
 djangorestframework==3.12.4
 firebase-admin==5.1.0
 google-api-core==2.2.2
@@ -25,6 +26,8 @@ grpcio-status==1.42.0
 gunicorn==20.1.0
 httplib2==0.20.2
 idna==3.3
+importlib-metadata==4.8.2
+Markdown==3.3.6
 msgpack==1.0.3
 packaging==21.3
 Pillow==8.4.0
@@ -43,3 +46,4 @@ sqlparse==0.4.2
 uritemplate==4.1.1
 urllib3==1.26.7
 whitenoise==5.3.0
+zipp==3.6.0
